infrastructure/aws/cloudFormation/template.json
{
	"AWSTemplateFormatVersion": "2010-09-09",
	"Description": "Sample CloudFormation Template for CSYE 6225 - Fall 2017",
	"Parameters": {
		"ImageId": {
			"Type": "String"
		},
		"InstanceType": {

			"Type": "String"
		},
		"KeyName": {
			"Type": "String"
		},
		"DBEngine": {
			"Type": "String"
		},
		"EngineVersion": {
			"Type": "String"
		},
		"DBInstanceClass": {
			"Type": "String"
		},
		"DBInstanceIdentifier": {
			"Type": "String"
		},
		"MasterUsername": {
			"Type": "String"
		},
		"MasterPassword": {
			"Type": "String"
		},
		"DBName": {
			"Type": "String"
		},
		"DynamoDBTableName":{
			"Type" : "String"
		},
		"BucketName":{
			"Type" : "String"
		}
	},
	"Resources": {

		"SecurityGroup": {
			"Type": "AWS::EC2::SecurityGroup",
			"Properties": {
				"GroupDescription": "Enable HTTP access via port 80, SSH access via port 22, HTTPS via port 443",
				"VpcId": "vpc-9754bdef",
				"GroupName": "csye6225-webapp",
				"SecurityGroupIngress": [{
						"IpProtocol": "tcp",
						"FromPort": "80",
						"ToPort": "80",
						"CidrIp": "0.0.0.0/0"
					},
					{
						"IpProtocol": "tcp",
						"FromPort": "22",
						"ToPort": "22",
						"CidrIp": "0.0.0.0/0"
					},
					{
						"IpProtocol": "tcp",
						"FromPort": "443",
						"ToPort": "443",
						"CidrIp": "0.0.0.0/0"
					}
				]
			}
		},
		"DbSecurityByEC2SecurityGroup": {
			"Type": "AWS::EC2::SecurityGroup",
			"Properties": {
				"GroupDescription": "Open database for access",
				"SecurityGroupIngress": [{
					"IpProtocol": "tcp",
					"FromPort": "3306",
					"ToPort": "3306",
					"SourceSecurityGroupId": {
						"Fn::GetAtt": [
							"SecurityGroup",
							"GroupId"
						]
					}
				}]
			}
		},
		"EC2Instance": {
			"Type": "AWS::EC2::Instance",
			"Properties": {
				"ImageId": {
					"Ref": "ImageId"
				},
				"InstanceType": {
					"Ref": "InstanceType"
				},
				"SecurityGroupIds": [{
					"Fn::GetAtt": [
						"SecurityGroup",
						"GroupId"
					]
				}],
				"KeyName": {
					"Ref": "KeyName"
				}
			}
		},

		"DBInstance": {
			"Type": "AWS::RDS::DBInstance",
			"Properties": {
				"AllocatedStorage" : "100",
				"Engine": {
					"Ref": "DBEngine"
				},
				"EngineVersion": {
					"Ref": "EngineVersion"
				},
				"DBInstanceClass": {
					"Ref": "DBInstanceClass"
				},
				"MultiAZ": "false",
				"DBInstanceIdentifier": {
					"Ref": "DBInstanceIdentifier"
				},
				"MasterUsername": {
					"Ref": "MasterUsername"
				},
				"MasterUserPassword": {
					"Ref": "MasterPassword"
				},
				"DBSubnetGroupName": {
					"Ref": "DBSubnet"
				},
				"VPCSecurityGroups": [{
					"Fn::GetAtt": ["DbSecurityByEC2SecurityGroup", "GroupId"]
				}],
				"PubliclyAccessible": "false",
				"DBName": {
					"Ref": "DBName"
				}
			}

		},
		"DynamoDBTable" : {
  			"Type" : "AWS::DynamoDB::Table",
  			"Properties" : {
  				  "AttributeDefinitions" :[
					{
                 			"AttributeName" : "PrimaryId",
					"AttributeType" : "S"
					}],
  				  "KeySchema" : [
					{
					"AttributeName" : "PrimaryId",
					"KeyType" : "HASH"
					}],
  				  "ProvisionedThroughput" : {"ReadCapacityUnits" : "5", "WriteCapacityUnits" : "5"},
    				  "TableName" : {"Ref" : "DynamoDBTableName"}
  }
},
   		"S3Bucket" : {
   		   "Type" : "AWS::S3::Bucket",
		   "Description" : "Name of S3 bucket to hold website content",
     		   "Properties" : {
        	   "AccessControl" : "PublicRead",
       		   "BucketName" : { "Ref" : "BucketName" }
   }
},
		"DBSubnet": {
			"Type": "AWS::RDS::DBSubnetGroup",
			"Properties": {
				"DBSubnetGroupDescription": "description",
				"SubnetIds": ["subnet-3e89ae32", "subnet-0917bf6d"]
			}
		}
	}
}
